--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -4,11 +4,10 @@
              android:layout_height="match_parent"
              tools:context="com.example.android.fastorder.PanelOrderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="order fragment"/>
+        android:layout_height="match_parent">
+    </ListView>
 
 </LinearLayout>
