--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.example.android.fastorder.MainActivity">
+              tools:context="com.example.android.fastorder.ui.MainActivity">
 
        <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
