--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.example.android.fastorder.PanelMenuFragment">
+             tools:context="com.example.android.fastorder.panelItems.PanelMenuFragment">
 
     <ListView
         android:id="@+id/android:list"
